--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <div class="landing-page">
       <div class="landing-scene">
         <!-- <img class="home-img grow" src="images/mainpage-background.jpg" /> -->
-        <p class="name">Yuqian Cao</p>
+        <p class="name">Yuqian Cao Hello from Singapore</p>
       </div>
 
       <div class="content">
