--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <div class="landing-page">
       <div class="landing-scene">
         <!-- <img class="home-img grow" src="images/mainpage-background.jpg" /> -->
-        <p class="name">Yuqian Cao Hello from Singapore</p>
+        <p class="name">Yuqian Cao</p>
       </div>
 
       <div class="content">
@@ -45,8 +45,8 @@
         />
         <p class="intro">
           Hello!
-          <br />My name is Rain and I am a computer science student passionate
-          in software development.
+          <br />My name is Rain and I am a computer science student currently in
+          singapore!
         </p>
       </div>
     </div>
