--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,7 @@
         />
         <p class="intro">
           Hello!
-          <br />My name is Rain and I am a computer science student currently in
-          singapore!
+          <br />My name is Rain and Singapore rains all the time!
         </p>
       </div>
     </div>
