--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
         />
         <p class="intro">
           Hello!
-          <br />My name is Rain and Singapore rains all the time!
+          <br />My name is Rain and Singapore rains all the time, like
+          seriously!
         </p>
       </div>
     </div>
