--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         />
         <p class="intro">
           Hello!
-          <br />My name is Rain and Singapore rains all the time, like
+          <br />My name is Rain and Singapore rains all the time, like really
           seriously!
         </p>
       </div>
